# rust-graphql-template

./: README.md
.github/workflows/: template_values.toml
template/: Cargo.toml  cargo-generate.toml  flake.nix  pre-script.rhai
template/.github/workflows/: cd.yml
template/src/: main.rs
