[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
description = "{{project-description}}"
repository = "https://github.com/{{gh-username}}/{{project-name}}"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "7.0.3", features = ["tracing"] }
async-graphql-axum = "7.0.3"
axum = "0.7.4"
clap = { version = "4.5.0", features = ["derive", "env"] }
mimalloc = { version = "0.1.39" }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["release_max_level_info"] }
tracing-forest = { version = "0.1.6", features = ["chrono", "ansi", "tokio", "smallvec"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
